<resources>
    <string name="app_name">Wisebite</string>
    <string name="title_activity_create_restaurant">New Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_description">Description</string>
    <string name="hint_website">Website</string>
    <string name="hint_number_of_tables">Number of tables</string>
    <string name="err_msg_name">Enter your restaurant\'s name</string>
    <string name="err_msg_location">Enter your restaurant\'s location</string>
    <string name="err_msg_phone">Enter your restaurant\'s phone</string>
    <string name="err_msg_description">Enter your restaurant\'s description</string>
    <string name="err_msg_website">Enter your restaurant\'s website</string>
    <string name="err_msg_number_of_tables">Enter the number of tables of your restaurant</string>
    <string name="title_activity_create_restaurant_open_times">Add Open Times</string>
    <string name="title_create_restaurant_info">General information</string>
    <string name="title_create_restaurant_opentimes">Open times</string>
    <string name="monday_text">Monday</string>
    <string name="time_picker_test">Closed</string>
    <string name="tuesday_text">Tuesday</string>
    <string name="wednesday_text">Wednesday</string>
    <string name="thursday_text">Thursday</string>
    <string name="friday_text">Friday</string>
    <string name="saturday_text">Saturday</string>
    <string name="sunday_text">Sunday</string>
    <string name="title_first_time_picker">Start time</string>
    <string name="title_second_time_picker">End time</string>
    <string name="message_first_time_picker">Select a start time</string>
    <string name="message_second_time_picker">Select a end time</string>
    <string name="title_activity_create_restaurant_dishes">Add Dishes</string>
    <string name="title_create_restaurant_dishes">Restaurant dishes</string>
    <string name="menu_title">Menus</string>
    <string name="dish_title">Dishes</string>
    <string name="name_menu_test">Vegetarian menu</string>
    <string name="description_menu_test">Rico, rico y con fundamento.</string>
    <string name="price_menu_test">10.20 €</string>
    <string name="title_dish_form">Create a dish</string>
    <string name="form_hint_name">Name</string>
    <string name="form_description">Description</string>
    <string name="form_hint_price">Price</string>
    <string name="form_hint_price_euro">Price (€)</string>
    <string name="mock_dishes">No dishes yet.</string>
    <string name="mock_menus">No menus yet.</string>
    <string name="done">Done</string>
    <string name="title_activity_create_menu">CreateMenuActivity</string>
    <string name="big_title_menu">Menu</string>
    <string name="main_dishes_title">Main dishes</string>
    <string name="secondary_dishes_title">Secondary dishes</string>
    <string name="mock_main_dishes">No main dishes yet.</string>
    <string name="mock_secondary_dishes">No secondary dishes yet.</string>
    <string name="other_dishes_title">Other dishes</string>
    <string name="mock_other_dishes">No other dishes yet.</string>
    <string name="title_menu_form">Type menu information</string>
    <string name="info_menu_title">Information</string>
    <string name="name_test">Vegetarian Menu</string>
    <string name="description_test">Green, very green</string>
    <string name="price_test">10.50 €</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="active_orders">Active orders</string>
    <string name="table_number_test">Table 23</string>
    <string name="price_order_test">15.26 €</string>
    <string name="ready_test">Ready: 80%</string>
    <string name="delivered_test">Delivered: 65%</string>
    <string name="payed_test">Paid: 0%</string>
    <string name="user_image_content">User image</string>
    <string name="user_image_test">Juan Palomo</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>
    <string name="title_create_order">New order</string>
    <string name="name_dish_test">Fish</string>
    <string name="main">Main</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="price_test_zero">0.00 €</string>
    <string name="form_hint_table_number">Table number</string>
    <string name="title_table_number_form">Type table number</string>
    <string name="title_table_number_order">at table ?</string>
    <string name="title_menu_dishes_form">Select your dishes</string>
    <string name="title_activity_get_order">GetOrderActivity</string>
    <string name="ready_capital">READY</string>
    <string name="delivered_capital">DELIVERED</string>
    <string name="paid_capital">PAID</string>
    <string name="menu_dish_title">Menu\'s dishes</string>
    <string name="mock_dish_item">No dishes in this order.</string>
    <string name="title_activity_collect_order">CollectOrderActivity</string>
    <string name="title_collect_order_form">Collect order</string>
    <string name="message_collect_order_form">Do you want to collect all or in groups?</string>
    <string name="all">All</string>
    <string name="in_groups">In groups</string>
    <string name="collect_all_title">Collect all order items</string>
    <string name="order_item_title">Non paid items</string>
    <string name="mock_order_item">All items are paid in this order</string>
    <string name="action_cancel_order">Cancel</string>
    <string name="action_edit_order">Edit</string>
    <string name="cancel_message">Do you to cancel this order? All related data will be removed.</string>
    <string name="restaurant_name_test">El seller de Can Roca</string>
    <string name="title_activity_get_restaurant">GetRestaurantActivity</string>
    <string name="kitchen">Kitchen</string>
    <string name="create_restaurant">Create restaurant</string>
    <string name="see_restaurant">See restaurant</string>
    <string name="list_restaurants">List restaurants</string>
    <string name="analytics">Analytics</string>
    <string name="current_order">Current order</string>
</resources>