<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_restaurant"
            android:icon="@drawable/ic_add"
            android:title="@string/create_restaurant" />
        <item
            android:id="@+id/nav_active_orders"
            android:icon="@drawable/ic_magnify"
            android:title="@string/active_orders" />
        <item
            android:id="@+id/nav_kitchen"
            android:icon="@drawable/ic_food"
            android:title="@string/kitchen" />
        <item
            android:id="@+id/nav_see_restaurant"
            android:icon="@mipmap/eye"
            android:title="@string/see_restaurant" />
        <item
            android:id="@+id/nav_list_restaurants"
            android:icon="@mipmap/format_list_bullet"
            android:title="@string/list_restaurants" />
        <item
            android:id="@+id/nav_analytics"
            android:icon="@mipmap/google_analytics"
            android:title="@string/analytics" />
        <item
            android:id="@+id/nav_current_order"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/current_order" />
    </group>

</menu>
