<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.wisebite.wisebite.activity.CreateMenuActivity"
    tools:showIn="@layout/activity_create_menu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/big_title_menu"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_menu_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Labels -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.2">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/hint_name"
                                android:textColor="@color/black"
                                android:textSize="15sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/hint_description"
                                android:textColor="@color/black"
                                android:textSize="15sp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/form_hint_price"
                                android:textColor="@color/black"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </RelativeLayout>

                    <!-- Info -->
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/name_form_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/name_test"
                                android:textSize="15sp"/>

                            <TextView
                                android:id="@+id/description_form_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/description_test"
                                android:textSize="15sp"/>

                            <TextView
                                android:id="@+id/price_form_result"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_info_menu"
                                android:layout_marginBottom="@dimen/margin_info_menu"
                                android:text="@string/price_test"
                                android:textSize="15sp"/>

                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_dishes_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/mock_main_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_main_dishes"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_main_dishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secondary_dishes_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/mock_secondary_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_secondary_dishes"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_secondary_dishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other_dishes_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/mock_other_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_other_dishes"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_other_dishes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
