<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dev.wisebite.wisebite.activity.CreateOrderActivity"
    tools:showIn="@layout/activity_create_order">

    <LinearLayout
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_order"
            android:textColor="@color/colorPrimary"
            android:gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/table_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_table_number_order"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="5dp"
            android:gravity="start"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_test_zero"
            android:textColor="@color/black"
            android:gravity="end"
            android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/dish_title"
        android:layout_below="@id/view_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/dish_title"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="start"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_order_item_dish"
        android:layout_below="@id/dish_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/menu_title"
        android:layout_below="@id/recycler_view_order_item_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/menu_title"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="start"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_order_item_menu"
        android:layout_below="@id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
